--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         const textureLoader = new THREE.TextureLoader();
         // ★★★ REPLACE THIS URL WITH YOUR IMAGE LINK ★★★
         // Use a square image for best results.
-        const particleTexture = textureLoader.load('https://assets.codepen.io/16327/logo_1.png'); 
+        const particleTexture = textureLoader.load('https://images.pexels.com/photos/3997379/pexels-photo-3997379.jpeg?_gl=1*uxcd6x*_ga*NTkxNjIyMzQ2LjE3NjU2MDg3MTQ.*_ga_8JE65Q40S6*czE3NjU2MDg3MTQkbzEkZzEkdDE3NjU2MDg3MjckajQ3JGwwJGgw'); 
 
         // 4. SCORPIO CONSTELLATION DATA
         // I mapped these manually to look like the Scorpio shape in 3D space
