--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         
         // ★★★ REPLACE THE URL BELOW WITH YOUR PERSON'S IMAGE ★★★
         // Note: Use a small 100x100px image for best performance!
-        const particleTexture = textureLoader.load('https://assets.codepen.io/16327/logo_1.png');
+        const particleTexture = textureLoader.load('https://images.pexels.com/photos/1468379/pexels-photo-1468379.jpeg?_gl=1*cxdyzo*_ga*NTkxNjIyMzQ2LjE3NjU2MDg3MTQ.*_ga_8JE65Q40S6*czE3NjU2MTExNjYkbzIkZzEkdDE3NjU2MTExNzUkajUxJGwwJGgw');
 
         // --- SCORPIO COORDINATES ---
         // I mapped the shape of Scorpio on a flat plane (X, Z)
