--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 
   <div id="start-screen">
     <div class="icon">🫰</div>
-    <h1 style="letter-spacing: 3px; text-transform: uppercase; margin:0;">Magic Heart</h1>
+    <h1 style="letter-spacing: 3px; text-transform: uppercase; margin:0;">Magic</h1>
     <p style="font-size:13px; color:#aaa; max-width: 320px; line-height: 1.6; margin-top:15px;">
       1. Open Hand = <span style="color:#00ffff">Explode</span><br>
-      2. Finger Heart = <span style="color:#ff007f; font-weight:bold;">Reveal Love ❤️</span>
+      2. Finger Heart = <span style="color:#ff007f; font-weight:bold;">Reveal </span>
     </p>
     <button id="start-btn">START</button>
   </div>
