--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@ Goodnight, my universe. ❤️
         let part2Running = false;
         
         const initPart2 = () => {
-            const HER_PHRASES = ["dễ thương quá à !", "Mắc gì...", "Ư...", "Ê... !", "Thôi mà !", "ngon lắm á!", ];
+            const HER_PHRASES = ["dễ thương quá à !", "Mắc gì...", "Ư...", "Ê... !", "Thôi mà !", "ngon lắm á!","Ừ...","tự nhiên !", "ý là...", "nhưng mà...","kiểu như...","cái xong oy...",  ];
             const PARTICLE_COUNT = 3000; const SPHERE_RADIUS = 200; const HEART_SCALE = 1.6; 
             
             let camera, scene, renderer, particles;
