--- a/index.html
+++ b/index.html
@@ -248,15 +248,28 @@ Feel how special you are...
 
         // Part 3 Final Text (Auto-typing)
         const FINAL_MESSAGE = `
-And finally...
+Gửi Thảo Miu,
 
-I just want to say,
-thank you for being in my life.
+Thời gian được làm việc - đi chơi chung với bà...
+rất đáng quý - Thật sự trong khoảng thời gian đó tui đã gặp "Phúc"
 
-No matter where the stars guide us,
-I will always be looking at you.
+Bà chín chắn so với tuổi rất nhiều...
+và tui học được rất nhiều - dù là lúc bà im lặng
 
-Goodnight, my universe. ❤️
+Bà mang đến sự thoải mái cho mọi người xung quanh
+tiếng cười cho những người bạn thân 
+
+Và đặc biệt là cách ứng xử của bà sau mỗi tình huống
+thực sự là tui rất kính nể cũng như cần học hỏi nhiều
+
+Nói lời cảm ơn với những gì bà đã làm thì sẽ không đủ
+Tui chỉ có thể giữ sự biết ơn và ghi nhớ nó
+
+Và những lời xin lỗi cũng vậy
+Tui đã hiểu nó 1 phần nào trước khi muốn nói với bà 
+
+Hy vọng năm tới những điều tốt đẹp sẽ đến với bà,
+nhẹ nhàng hơn ...
         `;
 
 
