--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
         
         #final-text-container {
             width: 80%; max-width: 600px; text-align: center;
+            overflow:scroll;
         }
 
         #final-message-text {
